# 3DViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/agents/: japanese-summary-agent.md
CMakeUtils/: 3DViewerUtil.cmake  QtUtil.cmake  UtilityFunction.cmake
Core/: CMakeLists.txt  CoreConstants.h  CoreDebug.h  CoreGlobal.h  MutexWrapper.h
Core/Math/: BoundingBox2f.h  BoundingBox3d.h  BoundingBox3f.h  CoreMath.cpp  CoreMath.h  Frustum.cpp  Frustum.h  Matrix4x4f.cpp  Matrix4x4f.h  Planed.h  Planef.h  Point.cpp  Point2f.h  Point2i.h  Point3d.h  Point3f.h  Point3i.h  Point4d.h  Point4f.h  PolyLoop2f.cpp  PolyLoop2f.h  SearchPerform.h  UnitSystem.cpp  UnitSystem.h
Core/Memory/: ControlBlock.h  RefPtr.h  Referenced.cpp  Referenced.h  WeakRefPtr.h
Core/Scene/: Annotation.cpp  Annotation.h  Attribute.cpp  Attribute.h  Dimension.cpp  Dimension.h  Mesh.cpp  Mesh.h  MultiDimension.cpp  MultiDimension.h  Node.cpp  Node.h  NormalMesh.cpp  NormalMesh.h  Object.h  PickObject.cpp  PickObject.h  RenderMesh.cpp  RenderMesh.h  RenderNormalMesh.cpp  RenderNormalMesh.h  Renderable.cpp  Renderable.h  SceneGraph.cpp  SceneGraph.h  SceneView.cpp  SceneView.h  Shape.cpp  Shape.h  Voxel.cpp  Voxel.h  VoxelScalar.cpp  VoxelScalar.h
Core/Utils/: Clipping.cpp  Clipping.h  Picking.cpp  Picking.h
Main/: CMakeLists.txt  icon.rc  main.cpp  resources.qrc
Render/: CMakeLists.txt  GLRenderText.cpp  GLRenderText.h  GLSceneRender.cpp  GLSceneRender.h  RenderData.h  RenderGlobal.h  resources.qrc
Render/shaders/: background_fragment.glsl  background_vertex.glsl  fragment.glsl  geometry.glsl  pick_fragment.glsl  pick_vertex.glsl  segment_geometry.glsl  vertex.glsl  voxel_vertex.glsl
VoxViewer/: CMakeLists.txt  ClippingCtrl.cpp  ClippingCtrl.h  CommonSubClass.cpp  CommonSubClass.h  CommonSubFunc.cpp  CommonSubFunc.h  CsvUtil.cpp  CsvUtil.h  CustomCombo.h  CustomDoubleSpin.h  CustomLineEdit.cpp  CustomLineEdit.h  CustomSpin.h  CustomTabWidget.h  CustomTableWidget.cpp  CustomTableWidget.h  CustomTooltip.h  DimensionCtrl.cpp  DimensionCtrl.h  FileExplorerDialog.cpp  FileExplorerDialog.h  GeometryInputForm.cpp  GeometrySubScene.cpp  GeometrySubScene.h  LightSetting.ui  LightSettingDlg.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow3DViewer.h  MainWindow3DViewer.ui  MemoryMappedFile.h  MyOpenGLWidget.cpp  MyOpenGLWidget.h  NonBorderGroupBox.h  Op2ArraySetting.ui  OutputFileThread.cpp  OutputFileThread.h  RangeSlider.cpp  (+35 more)
VoxViewer/ui_files/: CommonSubFunc.ui  GeometryInputForm.h  GeometryInputForm.ui  LightSettingDlg.cpp  MainWindow3DViewer.cpp  Op2ArraySetting.cpp  Op2ArraySetting.h  OptPerformanceSetting.cpp  OptPerformanceSetting.h  OptPerformanceSetting.ui  ResultOutputDlg.cpp  ResultOutputDlg.h  SaveColorMapDlg.h  Vox3DForm.cpp  Vox3DForm.h  Vox3DForm.ui  VoxOutputDlg.cpp  VoxOutputDlg.h
build_check/: CMakeCache.txt
earcut/: README.md
